# e-customerservice

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  langgraph.json  mkdocs.yml  notice  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/: .gitignore
docs/: index.md
docs/api/: api.md  audit.md  auth.md  base.md  departments.md  files.md  menus.md  permissions.md  role.md  roles.md  users.md
frontend/: index.html  script.js  style.css
graphrag_local/: .gitignore  chunk_results_20251203_155451.csv  chunk_results_20251203_163514.csv  pyproject.toml  settings.yaml
graphrag_local/dev/: graphrag_api.py  graphrag_indexing.py  graphrag_prompt_tune.py  graphrag_query.py
graphrag_local/graphrag/: __main__.py
graphrag_local/graphrag/api/: __init__.py
graphrag_local/graphrag/config/: defaults.py  enums.py
graphrag_local/graphrag/config/models/: input_config.py
graphrag_local/graphrag/index/input/: pdf.py  util.py
graphrag_local/graphrag/index/operations/chunk_text/: chunk_text.py  markdown_strategy.py
graphrag_local/graphrag/prompt_tune/loader/: input.py
graphrag_local/pdf_outputs/tmp7b0g77a5/auto/: image_descriptions.json  table_descriptions.json  tmp7b0g77a5.md  tmp7b0g77a5_content_list.json  tmp7b0g77a5_middle.json  tmp7b0g77a5_model.json
graphrag_local/pdf_outputs/tmpoa52heg0/: download_failed.txt
graphrag_local/prompt_turn_output/: community_report_graph.txt  community_report_graph_gpt.txt  extract_graph.txt  extract_graph_gpt.txt  summarize_descriptions.txt  summarize_descriptions_gpt.txt
migrations/models/: 1_20251219153856_None.py
src/api/: __init__.py
src/api/langgraph/: __init__.py
src/api/langgraph/query/: __init__.py  query.py
src/core/: middlewares.py
src/lg/: cs_build.py  langgraph.json  lg_builder.py  lg_prompts.py  lg_states.py
src/lg/lg_middlemares/: dynamic_model.py  dynamic_system_prompt.py  safety_guardrail.py
src/lg/lg_test/: kg_neo4j_conn_test.py
src/lg/sub_lg_graphrag/agentic_rag/components/: state.py
src/lg/sub_lg_graphrag/agentic_rag/components/customer_tools/: node.py
src/lg/sub_lg_graphrag/agentic_rag/components/cypher_tools/: node.py  utils.py
src/lg/sub_lg_graphrag/agentic_rag/components/final_answer/: node.py
src/lg/sub_lg_graphrag/agentic_rag/components/guardrails/: node.py  prompts.py
src/lg/sub_lg_graphrag/agentic_rag/components/planner/: node.py  prompts.py
src/lg/sub_lg_graphrag/agentic_rag/components/predefined_cypher/: __init__.py  node.py  utils.py
src/lg/sub_lg_graphrag/agentic_rag/components/summarize/: node.py
src/lg/sub_lg_graphrag/agentic_rag/components/text2cypher/: __init__.py
src/lg/sub_lg_graphrag/agentic_rag/components/tool_selection/: node.py  prompts.py
src/lg/sub_lg_graphrag/agentic_rag/retrivers/: base.py  northwind_retriever.py
src/lg/sub_lg_graphrag/agentic_rag/workflow/multi_agent/: __init__.py  multi_tool.py  sub_graph.py
src/repositories/: kg_neo4j_conn.py
src/settings/: config.py  lg_config.py  test_config.py
src/utils/: uuid.py
